--- a/payment.html
+++ b/payment.html
@@ -1,7 +1,7 @@
-<P>Name on Card
-    Card number
-    Expiration Date (MM/YY)
-    CVV
+<P>Name on Card: ___________
+    Card Number: ___________
+    Expiration Date (MM/YY): ___________
+    CVV: ___________
     Billing Address:
 Street: ___________
 City: ___________
